<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.fraunhofer.iosb.ilt.FROST-Server</groupId>
    <artifactId>FROST-ServerParent</artifactId>
    <version>1.12-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>FROST-ServerParent</name>
    <description>A server implementation of the OGC SensorThings API.</description>
    <url>https://github.com/FraunhoferIOSB/FROST-Server</url>
    <inceptionYear>2016</inceptionYear>

    <modules>
        <module>FROST-Server.MQTTP</module>
        <module>FROST-Server.HTTP</module>
        <module>FROST-Server.HTTP.Common</module>
        <module>FROST-Server.MQTT</module>
        <module>FROST-Server.MQTT.Moquette</module>
        <module>FROST-Server.Core.Model</module>
        <module>FROST-Server.Core</module>
        <module>FROST-Server.SQLjooq</module>
        <module>FROST-Server.Auth.Basic</module>
        <module>FROST-Server.Auth.Keycloak</module>
        <module>FROST-Server.Util</module>
        <module>Plugins</module>
        <module>FROST-Server.Tests</module>
    </modules>

    <properties>
        <annotation-api.version>1.3.1</annotation-api.version>
        <codegen.version>0.6.8-uuid</codegen.version>
        <commons-io.version>2.6</commons-io.version>
        <commons-lang3.version>3.10</commons-lang3.version>
        <commons-csv.version>1.8</commons-csv.version>
        <FROST-Client.version>0.29</FROST-Client.version>
        <git-commit-id-plugin.version>4.0.0</git-commit-id-plugin.version>
        <geolatte-common.version>0.8</geolatte-common.version>
        <guava.version>29.0-jre</guava.version>
        <httpclient.version>4.5.12</httpclient.version>
        <dbcp2.version>2.7.0</dbcp2.version>
        <jackson.version>2.10.3</jackson.version>
        <jacksonDatabind.version>2.9.9.2</jacksonDatabind.version>
        <jacksonGeojson.version>1.14</jacksonGeojson.version>
        <javacc.version>7.0.5</javacc.version>
        <javacc-maven-plugin.version>2.6</javacc-maven-plugin.version>
        <jetty.version>9.4.28.v20200408</jetty.version>
        <jodatime.version>2.10.5</jodatime.version>
        <json-patch.version>1.12</json-patch.version>
        <junit.version>4.13</junit.version>
        <keycloak.version>9.0.2</keycloak.version>
        <liquibase.version>3.8.9</liquibase.version>
        <logback.version>1.2.3</logback.version>

        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
        <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
        <maven-war-plugin.version>3.2.3</maven-war-plugin.version>
        <owasp.version>5.3.2</owasp.version>

        <org.json.version>20190722</org.json.version>
        <paho.version>1.2.3</paho.version>
        <postgis.version>2.5.0</postgis.version>
        <postgres.version>42.2.12</postgres.version>
        <querydsl.version>4.1.4</querydsl.version>
        <slf4j-api.version>1.7.30</slf4j-api.version>
        <testcontainers.version>1.14.0</testcontainers.version>

        <javax-activation.version>1.1.1</javax-activation.version>
        <dockerfile-maven-plugin.version>1.4.13</dockerfile-maven-plugin.version>

        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
        <docker.dependencies.dir>${project.build.directory}/docker_deps</docker.dependencies.dir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>

        <bintray.subject>fraunhoferiosb</bintray.subject>
        <bintray.repo>Maven</bintray.repo>
        <bintray.package>FROST-Server</bintray.package>
    </properties>

    <licenses>
        <license>
            <name>GNU Lesser General Public License v3, or (at your option) any later version</name>
            <url>https://www.gnu.org/licenses/lgpl-3.0.txt</url>
            <comments>For more information see the LICENSE.txt included with the sources.</comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Hylke van der Schaaf</name>
            <email>hylke.vanderschaaf@iosb.fraunhofer.de</email>
            <organization>Fraunhofer IOSB</organization>
            <organizationUrl>https://www.iosb.fraunhofer.de</organizationUrl>
        </developer>
    </developers>

    <organization>
        <name>Fraunhofer IOSB</name>
        <url>http://iosb.fraunhofer.de</url>
    </organization>

    <scm>
        <connection>scm:git:git://github.com/FraunhoferIOSB/SensorThingsServer.git</connection>
        <developerConnection>scm:git:ssh://github.com:FraunhoferIOSB/SensorThingsServer.git</developerConnection>
        <url>https://github.com/FraunhoferIOSB/FROST-Server/tree/master</url>
        <tag>HEAD</tag>
    </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/FraunhoferIOSB/FROST-Server/issues</url>
    </issueManagement>

    <distributionManagement>
        <repository>
            <id>fraunhoferiosb-Maven</id>
            <url>https://api.bintray.com/maven/${bintray.subject}/${bintray.repo}/${bintray.package}/;publish=1</url>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>bintray</id>
            <url>https://jcenter.bintray.com</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>bintray-fraunhoferiosb-Maven</id>
            <url>https://dl.bintray.com/fraunhoferiosb/Maven</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <!-- Repository for io.moquette:moquette-mapdb-storage -->
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>bintray-andsel-maven</id>
            <name>bintray</name>
            <url>https://dl.bintray.com/andsel/maven</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>bintray-fraunhoferiosb-Maven</id>
            <url>https://dl.bintray.com/fraunhoferiosb/Maven</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <profiles>
        <profile>
            <id>SUREFIRE-1588</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
            </properties>
        </profile>
        <profile>
            <id>owasp</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.owasp</groupId>
                        <artifactId>dependency-check-maven</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>${maven-war-plugin.version}</version>
                    <configuration>
                        <archiveClasses>true</archiveClasses>
                        <attachClasses>true</attachClasses>
                        <failOnMissingWebXml>true</failOnMissingWebXml>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven-source-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${maven-javadoc-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <excludePackageNames>de.fraunhofer.iosb.ilt.frostserver.parser.path:de.fraunhofer.iosb.ilt.frostserver.parser.query</excludePackageNames>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.owasp</groupId>
                    <artifactId>dependency-check-maven</artifactId>
                    <version>${owasp.version}</version>
                    <configuration>
                        <suppressionFiles>
                            <suppressionFile>owaspSuppressions.xml</suppressionFile>
                        </suppressionFiles>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>aggregate</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven-release-plugin.version}</version>
            </plugin>
        </plugins>
    </build>

</project>
